2000-01-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_refclock_chu): Provide the CHU driver by
	default, and by default prefer the AUDIO version.  We used to
	limit this to SunOS or Solaris; now we drive by the availability
	of the audioio header file.
	Select the IRIG and WWV audio drivers the same way.

	* flock-build: build ignores the -l flag; lose it.
	(BUILD_ARGS): added.
	* build: Remove unused -l stuff (LOG variable).

	* ntpd/ntp_refclock.c: HAVE_PPSAPI header cleanup
	From: Reg Clemens <reg@dwf.com>

2000-01-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (CLOCK_WWV): Require <sys/audioio.h> or <sun/audioio.h>

1999-12-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98i

	* ntpd/refclock_gpsvme.c: Fixes
	From: Michael Barone <michael.barone@lmco.com>
	Patch severely hacked by HMS to "make it conform".  I hope I
	didn't break anything.

	* scripts/ntpsweep: Nifty utility
	From: Hans.Lambermont@nl.origin-it.com

	* ntpd/refclock_fg.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/ntp_control.c: 
	* ntpd/Makefile.am: 
	* libntp/clocktypes.c: 
	* include/ntp.h: 
	* html/refclock.htm: 
	* html/driver37.htm: 
	* configure.in: 
	* acconfig.h: 
	Forum Graphic GPS clock support
	From: Dmitry Smirnov <das@online.nsk.su>
	
	* configure.in: Default to compile the IRIG, CHU and WWV/H
	drivers and compile the CHU driver for audio, not modem.
	Requested by Dave Mills.

	* html/audio.htm: 
	* html/driver36.htm: 
	* html/qth.htm: 
	Dave wrote these to go along with the changes I checked in yesterday.
	
1999-12-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/refclock_chu.c: 
	* ntpd/ntp_refclock.c: 
	* ntpd/ntp_loopfilter.c: 
	* html/refclock.htm: 
	* html/pps.htm: 
	* html/index.htm: 
	* html/driver7.htm: 
	* html/driver6.htm: 
	* html/copyright.htm: 

	I indulged an old agenda to polish up some programs originally
	written for a DSP evaluation board. The result is a really hot